(regression tests) changed deprecated calls leading to msgs like "[deprecation] Integer(int) in Integer has been deprecated" to ::valueOf invocations